--- a/css/estilo.css
+++ b/css/estilo.css
@@ -22,58 +22,93 @@ display: inline;
 
 nav ul li a {
 	text-transform: uppercase;
-	color: #fff;
+	color: #FFF;
 	font-size: 16px;
 	text-decoration: none;
 	padding: 10px;
 	float: unset;
+	-webkit-transition: all ease-in-out 500ms; /* Chrome + Safari */
+	-moz-transition: all ease-in-out 500ms; /* Firefox */
+	-o-transition: all ease-in-out 500ms; /* Opera*/
+	transition: all ease-in-out 500ms; /* IE */
 }
 
 nav ul li a:hover{
-	color:#FF0000;
+	color:#263238;
+	background-color: #FFF;
 }
 
 .btn-login {
 	background-color: #40C4FF;
-	border: none;
-	margin-right: 10px;
+	color: #FFF;
+	margin-right: 5px;
+	-webkit-transition: all ease-in-out 500ms; /* Chrome + Safari*/
+	-moz-transition: all ease-in-out 500ms; /* Firefox */
+	-o-transition: all ease-in-out 500ms; /* Opera*/
+	transition: all ease-in-out 500ms; /* IE */
 }
 .btn-login:hover {
-	color: #fff;
+	color: #40C4FF;
+	background: #FFF;
 }
 .btn-registrar {
 	background-color: #FF9800;
-	border: none;
+	color: #FFF;
+	-webkit-transition: all ease-in-out 500ms; /* Chrome + Safari */
+	-moz-transition: all ease-in-out 500ms; /* Firefox */
+	-o-transition: all ease-in-out 500ms; /* Opera*/
+	transition: all ease-in-out 500ms; /* IE */
 }
-.btn-registrar:hover {
-	color: #fff;
+
+.btn-registrar:hover {	
+	background-color: #FFF;
+	color: #FF9800;
+	border: #263238;
 }
 
 .banner{
-	background: url(../img/1240x300.png);
+	background: url(../img/banner.jpg);
 	width: 100%;
 	height: 300px;
+	font-family: sans-serif;
 }
 .banner p {
+	color: #FFF;
+	font-size: 20pt;
 	text-align: center;
 	margin: 0 auto;
-	padding: 80px 50px 0px 50px;
+	padding: 60px 20px 10px 20px;
+}
+.banner h2{
+	color: #FFF;
+	text-align: center;
+	margin: 0 auto;
+	padding: 20px 20px;
+	font-size: 24pt;
 }
 .btn-cadastrar {
-	font-family: sans-serif;
 	background-color: #40C4FF;
+	color: #FFF;
+	text-align: center;
+	font-size: 12pt;
+	text-transform: uppercase;	
+	font-family: sans-serif;
+	text-decoration: none;
 	border: none;
-    color: white;
-    width: 210px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 100px;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
     display: block;
-    font-size: 16px;
+	width: 250px;
+	margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
+	padding: 15px 30px;
+	border-radius: 7px;
+    -webkit-transition: all ease-in-out 600ms; /* Chrome + Safari */
+	-moz-transition: all ease-in-out 600ms; /* Firefox */
+	-o-transition: all ease-in-out 600ms; /* Opera*/
+	transition: all ease-in-out 600ms; /* IE */
 }
 .btn-cadastrar:hover {
-	box-shadow: 5px 5px 16px #404448;
+	-webkit-box-shadow: 3px 3px 12px rgba(255, 255, 255, 0.5); /* Chrome + Safari */
+	-moz-box-shadow: 3px 3px 12px rgba(255, 255, 255, 0.5); /* Firefox */
+	box-shadow: 3px 3px 12px rgba(255, 255, 255, 0.5); /* IE + Opera */
 }
